2013-01-31  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac: Incremented the version number to 1.0.9.
	* configure: Regenerated.
	* Versions.def: Incremented the version number to 1.0.9.

2013-01-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/numdigits.h (left_justify): Fix for LE targets and
	cleanup VSX code.
	(DECIMAL_BIAS): Undef before define to avoid compiler warnings with
	multiple file inclusions.
	(DECIMAL_BIAS_DOUBLE): Likewise.

2013-01-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/numdigits.h (setexp): Fix endianess when setting
	the exponent.

2013-01-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/dpd/decimal128.c (decimal128FromNumber): Fix LE internal
	data handling.
	(decimal128ToNumber): Likewise.
	* libdecnumber/dpd/decimal32.c (decimal32FromNumber): Likewise.
	(decimal32ToNumber): Likewise.
	* libdecnumber/dpd/decimal64.c (decimal64FromNumber): Likewise.
	(decimal64ToNumber): Likewise.

2013-01-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-logd.c: Add more coverage with tests for logd32 and logd128.
	Also fix file indentation.

2013-01-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfptypeconv.c (___ieee_32_to_host): Optimize to use word or doublewords
	loads store by using compiler builtins.
	(___ieee_64_to_host): Likewise.
	(___ieee_128_to_host): Likewise.
	(___ieee_32_to_host): Likewise.
	(___ieee_64_to_host): Likewise.
	(___ieee_128_to_host): Likewise.

2013-01-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-amort.c (main): Fix compile warnings.
	* tests/test-param.c (param_test): Likewise.
	(main): Likewise.

2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/numdigits.h (numdigits): Define the decimal bias
	masks in an endianess neutral way.

2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
